# unity-titlebar

./: meson.build
data/: meson.build  unity.gresource.xml
gala-window-management-plugin/: DBusServer.vala  Main.vala  meson.build
wingpanel-indicator/: DisplayWidget.vala  Indicator.vala  SettingsPopover.vala  config.vala.in  meson.build
